# bevy_camera_blur

./: CHANGELOG.md  Cargo.toml  README.md  RELEASE-CHECKLIST.txt  RELEASES.md  TODO
assets/: gaussian_blur.wgsl
examples/: blurs_animation_2d.rs  blurs_animation_3d.rs  blurs_showcase_2d.rs  blurs_showcase_3d.rs  box_blur_2d.rs  box_blur_3d.rs  box_blur_animated.rs  common.rs  dual_blur_2d.rs  dual_blur_3d.rs  gaussian_blur_2d.rs  gaussian_blur_3d.rs  gaussian_blur_animated.rs  kawase_blur_2d.rs  kawase_blur_3d.rs  showcase_all_blurs_2d.rs  showcase_all_blurs_3d.rs
examples/helpers/: animation.rs  blursettings_ui.rs  mod.rs  showcase.rs
src/: gaussian_blur.rs  lib.rs
src/box_blur/: box_blur.wgsl  mod.rs  pipeline.rs  settings.rs  tweening.rs
src/dual_blur/: dual_blur.wgsl  mod.rs  pipeline.rs  settings.rs
src/gaussian_blur/: gaussian_blur.wgsl  mod.rs  pipeline.rs  settings.rs  tweening.rs
src/kawase_blur/: kawase_blur.wgsl  mod.rs  pipeline.rs  settings.rs
