[package]
name = "bevy_camera_blur"
version = "0.1.0"
edition = "2021"
description = "Camera blurring post-processing effects for the Bevy game engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BorisBoutillier/bevy_camera_blur"
homepage = "https://github.com/BorisBoutillier/bevy_camera_blur"
categories = ["games","game-development"]
keywords = ["bevy","blur"]
readme = "README.md"
autoexamples = false

[features]
default = []
# Enable support for Lens implementations for bevy_tweening
bevy_tweening = [ "dep:bevy_tweening" ]

[dependencies]
bevy_tweening = {version = "0.9" , optional = true }

[dependencies.bevy]
version = "0.12"
default-features = false
features = ["bevy_core_pipeline" , "bevy_render"]

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
bevy = "0.12"

[[example]]
name = "showcase_all_blurs_2d"

[[example]]
name = "showcase_all_blurs_3d"

[[example]]
name = "gaussian_blur_animated"
required-features = [ "bevy_tweening" ]

[[example]]
name = "box_blur_animated"
required-features = [ "bevy_tweening" ]
